--- a/public/plugins1/user_account/style.css
+++ b/public/plugins1/user_account/style.css
@@ -20,12 +20,11 @@ body {
 }
 
 .step-container {
-    border-top: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
+    
     width: 99.85%;
     height: 75px;
     margin-top: 70px;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
 }
 
 .fa-circle {
@@ -37,8 +36,7 @@ body {
 
 .step-box {
     padding: 10px;
-    border-left: 1px solid lightgrey;
-    border-right: 1px solid lightgrey;
+    border: 1px solid lightgrey;
     background-color: #fff;
 }
 
@@ -94,6 +92,18 @@ body {
     font-weight: 800;
     text-transform: uppercase;
 }
+.list{
+    text-align: left !important;
+}
+h6{
+    font-weight: 500 !important;
+}
+table{
+    width: 100%;
+}
+td > a{
+    font-weight: 500;
+}
 select{
     height: 50px !important;
     border: 1px solid #042851 !important;
@@ -102,7 +112,7 @@ select:focus {
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    border: 1px solid #042851 !important;
+    border: 1px solid var(--primary) !important;
     outline-width: 0;
 }
 
@@ -122,6 +132,9 @@ button {
     font-size: 16px;
     letter-spacing: 1px;
 }
+input:hover, select:hover{
+    border: 1px solid var(--primary) !important;
+}
 
 input,
 textarea{
@@ -138,14 +151,18 @@ textarea{
     font-size: 16px;
     letter-spacing: 1px;
 }
+input[type="file"]{
+    border:none;
+
 }
+
 
 input:focus,
 textarea:focus {
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    border: 1px solid skyblue !important;
+    border: 1px solid var(--primary) !important;
     outline-width: 0;
 }
 
@@ -153,7 +170,7 @@ button:focus {
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    border: 1px solid green !important;
+    border: none;
     outline-width: 0;
 }
 
@@ -165,12 +182,64 @@ button {
     width: 120px;
     letter-spacing: 2px;
 }
+.btn{
+    border-radius: 35px !important;
+}
+.btn-print{
+    background-color:#D5DDE6;
+    border-color: #D5DDE6;
+    color: var(--dark);
+    display: inline-block;
+    min-width: 100px;
+    padding: 5px;
+    border-radius: 5px;
+    text-transform: lowercase;
+    text-align: center;
 
+}
+.btn-print:hover{
+    color: var(--dark);
+}
+
+.form-wizard-next-btn{
+    background-color:var(--primary);
+    border-color: var(--primary) !important;
+    color: #ffffff;
+    display: inline-block;
+    min-width: 100px;
+    min-width: 120px;
+    padding: 10px;
+    text-transform: capitalize;
+    text-align: center;
+  }
+  
+  .form-wizard-prev-btn{
+    background-color: #CCD1D1;
+    border-color: #CCD1D1;
+    color: #ffffff;
+    display: inline-block;
+    min-width: 100px;
+    min-width: 120px;
+    padding: 10px;
+    text-transform: capitalize;
+    text-align: center;
+  }
 .fit-image {
     width: 100%;
     object-fit: cover;
 }
+.notice{
+    padding: 20px 50px;
+}
 
+.notice h4{
+    font-weight: 700;
+    color: var(--danger);
+}
+.payment{
+    height: 100px;
+    width: 150px;
+}
 @media screen and (max-width: 768px) {
     .break-line {
         display: block;
