--- a/public/plugins1/css/style.css
+++ b/public/plugins1/css/style.css
@@ -275,6 +275,9 @@ textarea.form-control.main {
 .left img {
   margin-left: -40px;
 }
+.bold{
+  font-weight: 600;
+}
 
 @media (max-width: 768px) {
   .left img {
@@ -313,7 +316,9 @@ button:focus,
 .btn {
   text-transform: uppercase;
 }
-
+.br-5{
+  border-radius: 5px;
+}
 .btn-download {
   padding: 20px 35px;
   font-size: 14px;
@@ -501,9 +506,11 @@ button:focus,
 }
 
 .main-nav .dropdown .dropdown-menu .dropdown-item.active, .main-nav .dropdown .dropdown-menu .dropdown-item.focus, .main-nav .dropdown .dropdown-menu .dropdown-item:focus, .main-nav .dropdown .dropdown-menu .dropdown-item:hover {
-  background-color: transparent;
+  background-color: ;
   color: #2e7eed;
   border-left: 3px solid #2e7eed;
+  font-weight: 800;
+  transition: .2s ease-in;
 }
 
 .main-nav .dropdown .dropdown-menu li:first-child {
